--- a/404.html
+++ b/404.html
@@ -1,3 +1,41 @@
-<b>Not Found</b>
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="UTF-8">
+    <title>404 Not Found</title>
+    <style>
+      body {
+        background-color: white;
+        color: black;
+        font-family: "Courier New", Courier, monospace;
+        padding: 40px;
+      }
 
-<p>The requested URL was not found on this server.</p>
+      h1 {
+        font-size: 24px;
+        color: red;
+      }
+
+      p {
+        font-size: 16px;
+      }
+
+      hr {
+        margin: 20px 0;
+      }
+
+      .footer {
+        font-size: 14px;
+        color: #666;
+      }
+    </style>
+  </head>
+  <body>
+    <h1>Not Found</h1>
+    <p>The requested URL was not found on this server.</p>
+    <hr>
+    <div class="footer">
+      Powered by <strong>ALVIAN UXIO</strong> · <strong>ALVINO PROJECT</strong> · <strong>MEYCI</strong> · <strong>EMILIA</strong>
+    </div>
+  </body>
+</html>
